3.N.N  - DD-MMM-2014
====================
- Added a complete statistical Libvirt (libvirt) graph.
- Added Upstart job. [#46]
- Added more verbosity during the startup.
- Fixed regexp that prevented collecting LOADPCT and ITEMP values in 'apcupsd'
  module.
	(thanks to Patrick Fallberg, patrick AT fallberg.net)
- Fixed to show the filesystem name when Monitorix is unable to detect its
  device name.
- Fixed messages of argument isn't numeric in addition at fs.pm in lines 650 and
  684. This happened if one of the filesystems defined is not a real mount
  point with an associated device name.
	(thanks to Andreas Itzchak Rehberg, izzy AT qumran.org for pointing this out)
- Fixed the values in the text interface of the 'fs' graph.
- Fixed init script to work with Chef properly. [#48]


3.5.1  - 06-May-2014
====================
- Added proper permission parameters depending on Apache version in the Apache
  configuration file 'docs/monitorix-apache.conf'. <https://bugzilla.redhat.com/show_bug.cgi?id=1062202>
- Added more error-verbosity when initializing modules.
- Added an extra configuration file specific for Debian systems. That file is
  expected to be placed in conf.d/ directory.
	(thanks to Andreas Itzchak Rehberg, izzy AT qumran.org)
- Added a new command line argument '-n' to prevent Monitorix from daemonizing
  and force it to run in the foreground. This is specially useful in debugging
  mode.
- Fixed the error message 'ERROR: line 1237: expected </row> element but found <v>' when upgrading to 3.5.0 version.
- Fixed to default to white color theme if 'theme_color' option is invalid or
  not defined.
- Fixed to merge correctly the main configuration file with any extra
  configuration files in conf.d/ directory.
- Fixed a bug in the naming scheme of the graphs on multiple lists in the 'fs'
  module.
	(thanks to Monitar, monitarisso AT sapo.pt for pointing this out)
- Fixed a bug in the 'fs' module that could kill Monitorix itself if open()